fix default logo in dark mode (#54)

--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -232,6 +232,11 @@ html {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  color-scheme: light;
+}
+
+html.dark {
+  color-scheme: dark;
 }
 
 body {
